--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "resume:job": "node scripts/resumeVideoByJobId.js"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.14.1",
