chore(netlify): broaden secrets-scan omit_paths to include generated .next static chunks and functions output

--- a/netlify.toml
+++ b/netlify.toml
@@ -33,5 +33,10 @@
     ".next/**/cache/**",
     ".netlify/.next/**",
     ".netlify/.next/cache/**",
-    ".netlify/.next/cache/webpack/**"
+    ".netlify/.next/cache/webpack/**",
+    # Also omit the entire generated Next output (static chunks) and Netlify functions
+    ".next/**",
+    ".next/_next/**",
+    ".next/static/**",
+    ".netlify/functions-internal/**"
   ]
