--- a/netlify.toml
+++ b/netlify.toml
@@ -5,18 +5,15 @@
 [build]
   command = "npm run build"
   publish = ".next"
-  environment = { SECRETS_SCAN_ENABLED = "limited" }
 
 [build.environment]
+  SECRETS_SCAN_ENABLED = "limited"
   # Configure secrets scan to skip public env vars
   SECRETS_SCAN_OMIT_KEYS = "NEXT_PUBLIC_FIREBASE_API_KEY,NEXT_PUBLIC_FIREBASE_APP_ID,NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN,NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID,NEXT_PUBLIC_FIREBASE_PROJECT_ID,NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET"
 
-  # In some workflows, example files or exported workflow files may contain placeholders
-  # or public URLs that look like secrets. Omit those paths from scanning to avoid
-  # false positives. Adjust as needed.
+[build.processing.secrets]
   # Paths to omit from secrets scanning. Include example files, build caches,
-  # and Netlify's generated build output so the scanner doesn't flag generated
-  # artifacts containing long hashes or inlined public env values.
+  # and Netlify's generated build output to avoid flagging artifacts.
   omit_paths = [
     # Example and exported artifacts that may legitimately contain long hashes
     "Workflow 2.json",
